chore: try to make github host my page...

--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>dag-maker</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>dag-maker</title><link href=https://raw.githubusercontent.com/07akioni/dag-maker/master/release/static/css/app.e032a223a664fda1fb59b21ead7f5acb.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=https://raw.githubusercontent.com/07akioni/dag-maker/master/release/static/js/manifest.99de0e54fec46d0ef70a.js></script><script type=text/javascript src=https://raw.githubusercontent.com/07akioni/dag-maker/master/release/static/js/vendor.8874ba1adb1dd169f255.js></script><script type=text/javascript src=https://raw.githubusercontent.com/07akioni/dag-maker/master/release/static/js/app.7a998bad13646b384f08.js></script></body></html>
